--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,1 +1,2 @@
 <link rel="stylesheet" type="text/css" href="/styles/global.css" media="all">
+<link rel="stylesheet" type="text/css" href="/styles/bulma/bulma.css" media="all">
